fix: spacing registration mobile view

--- a/client/src/pages/RegistrationPage/RegistrationPage.module.css
+++ b/client/src/pages/RegistrationPage/RegistrationPage.module.css
@@ -155,7 +155,7 @@
         border: 1px solid #96807A;
         border-radius: 5px;
         background-color: #F7EDE1;
-        margin-left: 11px;
+        margin-left: 14px;
     }
     
     .skintypeLabel {
